--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         </form>
     </main>
 
+    <footer>
+        <h2>Desenvolvido por: <a href="https://github.com/Alym62">Alyasaf🎈</a> </h2>
+        <hr>
+        <small>Meu primeiro NLW</small>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
 
     <script src="./main.js"></script>
